tests/fixtures/invalid/list_3_args.py
# list() takes at most 1 argument, got 3
x = list(1, 1, 1)
